--- a/backend/package.json
+++ b/backend/package.json
@@ -24,9 +24,12 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "axios": "^1.4.0",
+    "insta-fetcher": "^1.3.25",
+    "mongoose": "^7.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
