--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "axios": "^1.4.0",
+    "firebase": "^9.21.0",
+    "firebase-admin": "^11.8.0",
     "insta-fetcher": "^1.3.25",
     "mongoose": "^7.1.0",
     "reflect-metadata": "^0.1.13",
