--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "firebase-admin": "^11.8.0",
     "insta-fetcher": "^1.3.25",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "telegraf": "^4.12.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
