--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/schedule": "^2.2.1",
     "axios": "^1.4.0",
     "dotenv": "^16.0.3",
+    "eventsource": "^2.0.2",
     "firebase": "^9.21.0",
     "firebase-admin": "^11.8.0",
     "insta-fetcher": "^1.3.25",
