--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "insta-fetcher": "^1.3.25",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "typegram": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
