--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,7 @@
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.4",
-    "zustand": "^4.3.8"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.4",
