--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/schedule": "^2.2.1",
     "axios": "^1.4.0",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "eventsource": "^2.0.2",
     "firebase": "^9.21.0",
@@ -38,6 +39,7 @@
     "typegram": "^5.0.0"
   },
   "devDependencies": {
+    "@darraghor/eslint-plugin-nestjs-typed": "^3.21.2",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -48,7 +50,8 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
+    "@typescript-eslint/type-utils": "^5.59.6",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
